@@ -6,6 +6,7 @@
 	- add --xml popt alias for query modes.
 	- remove _rpmdb now that python2.[34] are commonly available.
 	- remove remnant -I/opt/local hacks, --prefix=/usr is recommended.
+	- rework configure.ac et al to lose internal library baggage flexibly.
 
 4.4 -> 4.4.1:
 	- force *.py->*.pyo byte code compilation with brp-python-bytecompile.
